--- a/style.css
+++ b/style.css
@@ -4,27 +4,20 @@
     --third-color: #1a1c3d;
     --bg-color: #f8fafc;
     background-color: var(--bg-color);
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif sans-serif;
+    font-family: sans-serif sans-serif; /********************************************/
     font-size: 20px;
 }
-*{
-    /*border: 1px solid rgb(117, 0, 0);*/
-}
-
 body{
     margin: 0px;
     padding: 0px;
     height: 100vh;
 }
-
 .layout {
     position: relative;
     min-height: 100%;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    /*grid-template-rows: auto 1fr auto;*/
 }
-
 .header {
     grid-column: 2/3;
     display: grid;
@@ -34,6 +27,9 @@ body{
     background-color: var(--third-color);
     color: var(--bg-color);
     padding: 1rem;
+    border-bottom: 6px solid var(--main-color);
+    border-top: 6px solid var(--main-color);
+    border-bottom-left-radius: 2%;
 }
 .input{
     display: flex;
@@ -103,7 +99,7 @@ img{
     font-size: 1.3rem;
 }
 .logo .cloud{
-    min-height: 120px;
+    height: 90px;
 }
 .menu-bar ul li img {
     height: 1.6rem;
@@ -120,13 +116,14 @@ img{
     font-weight: 700;
     justify-content: flex-start;
 }
-
 .container {
     background-color: var(--bg-color);
     color: var(--main-color);
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding: 10px 2px;
+    justify-content: center;
+    gap: .8rem;
 }
 .projects{
     height: auto;
@@ -134,6 +131,7 @@ img{
     display: grid;
     gap: 18px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    border-radius: 1%;
     box-shadow: 0 4px 20px var(--third-color);
     margin-left: 10px;
     margin-top: 10px;
@@ -143,12 +141,14 @@ img{
     height: max(200px, 30vh);
     border-radius: 10px;
     border: 2px solid var(--second-color);
+    border-left: 10px solid var(--main-color);
     display: grid;
     justify-content: center;
 }
-.one{
+.one-title{
+    display: flex;
+    justify-content: center;
     font-weight: 800;
-    align-items: center;
 }
 .two{
     
