--- a/style.css
+++ b/style.css
@@ -16,63 +16,55 @@ body{
     position: relative;
     min-height: 100%;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 7fr;
 }
+/******************************/
 .header {
     grid-column: 2/3;
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    grid-template-columns: 1fr 2fr;
+    gap: .5rem;
     background-color: var(--third-color);
     color: var(--bg-color);
-    padding: 1rem;
-    border-bottom: 6px solid var(--main-color);
+    padding: .5rem;
+    padding-right: 1rem;
     border-top: 6px solid var(--main-color);
-    border-bottom-left-radius: 2%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
-.input{
-    display: flex;
-    align-items: center;
-    gap: .8rem;
-}
-.input input{
-    border-radius: 10px;
-    flex: 1;
-    height: 1rem;
-}
-.input img{
-    height: 2rem;
-}
-.account img, 
 .user img{
     filter: none;
-    border-radius: 50%;
+    border-radius: 50px;
     height: 3rem;
     width: 3rem;
     object-fit: cover;
 }
-.account, .user{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+.user{
+    display: flex;
     align-items: center;
-    justify-items: stretch;
+    justify-content: center;
+    gap: 1rem;
+}
+.user-name{
+    align-self: center;
 }
 .header-menu{
     display: flex;
-    justify-content: start;
+    justify-content:space-evenly;
+    align-items: center;
     gap: 2rem;
 }
 .header-menu button{
+    font-size: .6rem;
     width: 5rem;
-    height: 3rem;
+    height: 2rem;
     color: white;
-    background-color: var(--main-color);
+    background-color: var(--second-color);
     font-weight: 800;
-    border-radius: 12%;
-    border: none;
-    padding: 1rem;
+    border-radius: 20px;
+    border: 1px solid var(--main-color);
 }
+/*****************************************/
 .sidebar {
     color: var(--bg-color);
     position:sticky;
@@ -88,7 +80,7 @@ body{
     list-style: none;
     padding: 0px;
 }
-img{
+img[class*=svg]{
     filter: invert(100%);
 }
 .logo {
@@ -97,6 +89,7 @@ img{
     grid-template-columns: 1fr 1fr;
     align-items: center;
     font-size: 1.3rem;
+    border-bottom: 2px solid var(--second-color);
 }
 .logo .cloud{
     height: 90px;
@@ -116,11 +109,12 @@ img{
     font-weight: 700;
     justify-content: flex-start;
 }
+/**************************************/
 .container {
     background-color: var(--bg-color);
     color: var(--main-color);
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 2fr .8fr;
     padding: 10px 2px;
     justify-content: center;
     gap: .8rem;
@@ -130,30 +124,76 @@ img{
     padding: 5px 20px;
     display: grid;
     gap: 18px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     border-radius: 1%;
     box-shadow: 0 4px 20px var(--third-color);
     margin-left: 10px;
     margin-top: 10px;
 }
 
-.projects div {
+.projects div{
     height: max(200px, 30vh);
     border-radius: 10px;
     border: 2px solid var(--second-color);
     border-left: 10px solid var(--main-color);
     display: grid;
     justify-content: center;
+    overflow: hidden;
+}
+.projects div img{
+    height: 80%;
+    width: 100%;
+    border-radius: 5%;
+}
+.projects div a {
+    text-decoration: none;
+    font-weight: 800;
+    color: var(--bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #00174d;
+    border-radius: 12px;
+    margin-bottom: 5px;
 }
 .one-title{
     display: flex;
     justify-content: center;
+    font-size: 1.2rem;
     font-weight: 800;
 }
 .two{
-    
+    display: grid;
+    gap: 2rem;
+    margin-right: 12px;
+    margin-top: 10px;
 }
-
+.features{
+    font-weight: 700;
+    height: auto;
+    padding: 5px 20px;
+    border-radius: 2%;
+    box-shadow: 0 4px 20px var(--third-color);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.Languages{
+    font-size: .8rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: .9rem;
+    border-bottom: 2px inset var(--main-color);
+}
+.Languages:last-child{
+    border: none;
+}
+.Languages img{
+    height: 2rem;
+    filter: invert(50%);
+}
 .footer {
     grid-column: span 2;
     color: var(--main-color);
